# nfs_classification

./: .gitignore  README.md  pyproject.toml
nfs_classification/: main.py  nomes_comuns.py
